Removed PMD issues : singleton class pmd issues
SVN-Revision: 17675